RP2040: Add pico test

--- a/platformio.ini
+++ b/platformio.ini
@@ -34,3 +34,24 @@ build_flags =
     -DMCU_VARIANT=MIMXRT1062
     -DCFG_TUSB_DEBUG_PRINTF="tusb_printf_hook"
     -DCFG_TUSB_DEBUG=2
+
+[env:pico]
+platform = raspberrypi
+board = pico
+framework = arduino
+
+src_filter =
+    +<*.cpp> +<*.c>
+    +<tinyusb/src/*.c>
+    +<tinyusb/src/common/*.c>
+    +<tinyusb/src/host/*.c>
+    +<tinyusb/src/class/hid/*.c>
+    +<tinyusb/src/portable/raspberrypi/rp2040/*.c>
+
+build_flags =
+    -Isrc/tinyusb/src
+    -DCFG_TUSB_MCU=OPT_MCU_RP2040
+    -DCFG_TUSB_DEBUG_PRINTF="tusb_printf_hook"
+    -DCFG_TUSB_DEBUG=1
+    -DNO_USB ;Disable arduino usb device code
+    -Wl,-Map,output.map
