transdimension is depreciated

--- a/platformio.ini
+++ b/platformio.ini
@@ -21,7 +21,7 @@ src_filter =
     +<tinyusb/src/host/*.c>
     +<tinyusb/src/class/hid/*.c>
     +<tinyusb/src/portable/ehci/*.c>
-    +<tinyusb/src/portable/nxp/transdimension/*.c>
+    +<tinyusb/src/portable/chipidea/ci_hs/hcd_ci_hs.c>
 
 build_flags =
     -Isrc/tinyusb/src
