--- a/platformio.ini
+++ b/platformio.ini
@@ -7,25 +7,29 @@
 ;
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
+[common]
+build_src_filter =
+    +<*.cpp> +<*.c>
+    +<tinyusb/src/*.c>
+    +<tinyusb/src/common/*.c>
+    +<tinyusb/src/host/*.c>
+    +<tinyusb/src/class/hid/*.c>
+build_flags =
+    -Isrc/tinyusb/src
 
 [env:teensy41]
 platform = teensy
 board = teensy41
 framework = arduino
 
-src_filter =
-    +<*.cpp> +<*.c>
-
-    +<tinyusb/src/*.c>
-    +<tinyusb/src/common/*.c>
-    +<tinyusb/src/host/*.c>
-    +<tinyusb/src/class/hid/*.c>
+build_src_filter =
+    +${common.build_src_filter}
     +<tinyusb/src/portable/ehci/*.c>
     +<tinyusb/src/portable/chipidea/ci_hs/hcd_ci_hs.c>
 
 build_flags =
-    -Isrc/tinyusb/src
-    -Isrc/tinyusb/hw/mcu/nxp/mcux-sdk/CMSIS/Include
+    ${common.build_flags}
+    -Isrc/tinyusb/lib/CMSIS_5/CMSIS/Core/Include
     -Isrc/tinyusb/hw/mcu/nxp/mcux-sdk/devices/MIMXRT1062
     -Isrc/tinyusb/hw/mcu/nxp/mcux-sdk/devices/MIMXRT1062/drivers
     -Isrc/tinyusb/hw/mcu/nxp/mcux-sdk/drivers/common
@@ -34,24 +38,3 @@ build_flags =
     -DMCU_VARIANT=MIMXRT1062
     -DCFG_TUSB_DEBUG_PRINTF="tusb_printf_hook"
     -DCFG_TUSB_DEBUG=2
-
-[env:pico]
-platform = raspberrypi
-board = pico
-framework = arduino
-
-src_filter =
-    +<*.cpp> +<*.c>
-    +<tinyusb/src/*.c>
-    +<tinyusb/src/common/*.c>
-    +<tinyusb/src/host/*.c>
-    +<tinyusb/src/class/hid/*.c>
-    +<tinyusb/src/portable/raspberrypi/rp2040/*.c>
-
-build_flags =
-    -Isrc/tinyusb/src
-    -DCFG_TUSB_MCU=OPT_MCU_RP2040
-    -DCFG_TUSB_DEBUG_PRINTF="tusb_printf_hook"
-    -DCFG_TUSB_DEBUG=1
-    -DNO_USB ;Disable arduino usb device code
-    -Wl,-Map,output.map
