--- a/platformio.ini
+++ b/platformio.ini
@@ -14,8 +14,13 @@ build_src_filter =
     +<tinyusb/src/common/*.c>
     +<tinyusb/src/host/*.c>
     +<tinyusb/src/class/hid/*.c>
+    +<tusb_xinput/xinput_host.c>
 build_flags =
     -Isrc/tinyusb/src
+    -Isrc/tusb_xinput
+    -DCFG_TUSB_DEBUG_PRINTF="tusb_printf_hook"
+    -DCFG_TUSB_DEBUG=1
+    -DCFG_TUH_XINPUT=4
 
 [env:teensy41]
 platform = teensy
@@ -36,5 +41,3 @@ build_flags =
     -DCPU_MIMXRT1062DVL6A
     -DCFG_TUSB_MCU=OPT_MCU_MIMXRT10XX
     -DMCU_VARIANT=MIMXRT1062
-    -DCFG_TUSB_DEBUG_PRINTF="tusb_printf_hook"
-    -DCFG_TUSB_DEBUG=2
