--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "src/tinyusb"]
 	path = src/tinyusb
 	url = https://github.com/hathach/tinyusb.git
+[submodule "src/tusb_xinput"]
+	path = src/tusb_xinput
+	url = https://github.com/Ryzee119/tusb_xinput.git
