teensy: Moved out of main

--- a/platformio.ini
+++ b/platformio.ini
@@ -9,7 +9,7 @@
 ; https://docs.platformio.org/page/projectconf.html
 [common]
 build_src_filter =
-    +<*.cpp> +<*.c>
+    +<tusb_glue.c>
     +<tinyusb/src/*.c>
     +<tinyusb/src/common/*.c>
     +<tinyusb/src/host/*.c>
@@ -29,11 +29,13 @@ framework = arduino
 
 build_src_filter =
     +${common.build_src_filter}
+    +<teensy/teensy.cpp>
     +<tinyusb/src/portable/ehci/*.c>
     +<tinyusb/src/portable/chipidea/ci_hs/hcd_ci_hs.c>
 
 build_flags =
     ${common.build_flags}
+    -Isrc/teensy
     -Isrc/tinyusb/lib/CMSIS_5/CMSIS/Core/Include
     -Isrc/tinyusb/hw/mcu/nxp/mcux-sdk/devices/MIMXRT1062
     -Isrc/tinyusb/hw/mcu/nxp/mcux-sdk/devices/MIMXRT1062/drivers
