lpcxpresso55s69: Add support

--- a/platformio.ini
+++ b/platformio.ini
@@ -43,3 +43,25 @@ build_flags =
     -DCPU_MIMXRT1062DVL6A
     -DCFG_TUSB_MCU=OPT_MCU_MIMXRT10XX
     -DMCU_VARIANT=MIMXRT1062
+
+[env:lpcxpresso55s69]
+platform = nxplpc
+board = lpcxpresso55s69
+framework = zephyr
+monitor_speed = 115200
+
+build_src_filter =
+    +${common.build_src_filter}
+    +<lpcxpresso55s69/lpcxpresso55s69.c>
+    +<tinyusb/src/portable/ohci/*.c>
+
+build_flags =
+    ${common.build_flags}
+    -DZEPHYR
+    -Isrc/lpcxpresso55s69
+    -Isrc/tinyusb/lib/CMSIS_5/CMSIS/Core/Include
+    -Isrc/tinyusb/hw/mcu/nxp/mcux-sdk/devices/LPC55S69
+    -Isrc/tinyusb/hw/mcu/nxp/mcux-sdk/devices/LPC55S69/drivers
+    -Isrc/tinyusb/hw/mcu/nxp/mcux-sdk/drivers/common
+    -DCFG_TUSB_MCU=OPT_MCU_LPC55S69
+    -DTUP_DCD_ENDPOINT_MAX=0
